# restaurants-tierlists

./: Dockerfile.frontend  Dockerfile.frontend.prod  GOOGLE_OAUTH_SETUP.md  README.md  auth.ts  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml
app/: page.tsx
backend/: .gitignore  CMakeLists.txt  Dockerfile  README.md
backend/migrations/: 000_init_database.sql  001_create_users.sql  README.md
backend/src/: main.cpp
backend/src/controllers/: HealthController.cc  HealthController.h  UserController.cc  UserController.h
backend/src/middleware/: AuthMiddleware.cc  AuthMiddleware.h
backend/tests/: health-endpoint-tests.md
docs/: DEPLOYMENT.md  DOKPLOY_QUICKSTART.md
export-service/: Dockerfile  package.json
export-service/src/: index.js
types/: next-auth.d.ts
